# CPACSCreator-Version0

./: .addLicense.bash.swp  .gitignore  .modifyLicenseForFilesInArgs.bash.swp  CMakeLists.txt  ChangeLog  Install-instruction-for-qtcreator  README.md  addLicense.bash  instalation-for-cpacs-creator-dev.txt  modifyLicenseForFilesInArgs.bash
CreatorLib/: CMakeLists.txt
CreatorLib/CPACSCreatorLib/: AircraftTree.cpp  AircraftTree.h  CMakeLists.txt  CPACSFile.cpp  CPACSFile.h  CPACSPointsProfile.cpp  CPACSPointsProfile.h  CPACSPositioning.cpp  CPACSPositioning.h  CPACSProfilesDB.cpp  CPACSProfilesDB.h  CPACSSegment.cpp  CPACSSegment.h  CPACSTransformation.cpp  CPACSTransformation.h  CPACSTree.cpp  CPACSTree.h  CPACSTreeItem.cpp  CPACSTreeItem.h  ConfigWriter.cpp  ConfigWriter.h  CreatorException.cpp  CreatorException.h  Helper.cpp  Helper.h  LoggerSetUp.cpp  LoggerSetUp.h  MCPACSPositioning.cpp  MCPACSTransformation.cpp  Point.cpp  Point.h  UniqueXPath.cpp  UniqueXPath.h  logger.conf
CreatorLib/CPACSCreatorLib/doc/: Doxyfile
CreatorLib/CPACSCreatorLib/doc/html/: AircraftTree_8h_source.html  CPACSFile_8h_source.html  CPACSPointsProfile_8h_source.html  CPACSPositioning_8h_source.html  CPACSProfilesDB_8h_source.html  CPACSSegment_8h_source.html  CPACSTransformation_8h_source.html  CPACSTreeItem_8h_source.html  CPACSTree_8h_source.html  CreatorException_8h_source.html  Helper_8h_source.html  LoggerSetUp_8h_source.html  Point_8cpp.html  Point_8h.html  Point_8h_source.html  UniqueXPath_8h_source.html  annotated.html  classCreatorException-members.html  classCreatorException.html  classcpcr_1_1AircraftTree-members.html  classcpcr_1_1AircraftTree.html  classcpcr_1_1CPACSFile-members.html  classcpcr_1_1CPACSFile.html  classcpcr_1_1CPACSPointsProfile-members.html  classcpcr_1_1CPACSPointsProfile.html  classcpcr_1_1CPACSPositioning-members.html  classcpcr_1_1CPACSPositioning.html  classcpcr_1_1CPACSProfilesDB-members.html  classcpcr_1_1CPACSProfilesDB.html  classcpcr_1_1CPACSSegment-members.html  classcpcr_1_1CPACSSegment.html  classcpcr_1_1CPACSTransformation-members.html  classcpcr_1_1CPACSTransformation.html  classcpcr_1_1CPACSTree-members.html  classcpcr_1_1CPACSTree.html  classcpcr_1_1CPACSTreeItem-members.html  classcpcr_1_1CPACSTreeItem.html  classcpcr_1_1LoggerSetUp-members.html  classcpcr_1_1LoggerSetUp.html  classcpcr_1_1Point-members.html  (+133 more)
CreatorLib/CPACSCreatorLib/doc/html/search/: all_61.js  all_62.js  all_63.js  all_64.js  all_65.js  all_66.js  all_67.js  all_68.js  all_69.js  all_6b.js  all_6c.js  all_6d.js  all_6e.js  all_6f.js  all_70.js  all_72.js  all_73.js  all_74.js  all_75.js  all_76.js  all_77.js  classes_61.js  classes_63.js  classes_64.js  classes_66.js  classes_68.js  classes_6c.js  classes_6d.js  classes_6e.js  classes_6f.js  classes_70.js  classes_72.js  classes_73.js  classes_74.js  classes_75.js  classes_76.js  classes_77.js  enumvalues_73.js  files_70.js  functions_61.js  (+21 more)
CreatorLib/CPACSCreatorLib/doc/latex/: Point_8cpp.tex  Point_8h.tex  annotated.tex  classCreatorException.eps  classCreatorException.tex  classcpcr_1_1AircraftTree.eps  classcpcr_1_1AircraftTree.tex  classcpcr_1_1CPACSFile.tex  classcpcr_1_1CPACSPointsProfile.tex  classcpcr_1_1CPACSPositioning.tex  classcpcr_1_1CPACSProfilesDB.tex  classcpcr_1_1CPACSSegment.tex  classcpcr_1_1CPACSTransformation.tex  classcpcr_1_1CPACSTree.eps  classcpcr_1_1CPACSTree.tex  classcpcr_1_1CPACSTreeItem.tex  classcpcr_1_1LoggerSetUp.tex  classcpcr_1_1Point.tex  classcpcr_1_1UniqueXPath.tex  classel_1_1Callback.eps  classel_1_1Callback.tex  classel_1_1Configuration.eps  classel_1_1Configuration.tex  classel_1_1ConfigurationTypeHelper.eps  classel_1_1ConfigurationTypeHelper.tex  classel_1_1Configuration_1_1Predicate.tex  classel_1_1Configurations.eps  classel_1_1Configurations.tex  classel_1_1Configurations_1_1Parser.eps  classel_1_1Configurations_1_1Parser.tex  classel_1_1CustomFormatSpecifier.tex  classel_1_1Helpers.eps  classel_1_1Helpers.tex  classel_1_1LevelHelper.eps  classel_1_1LevelHelper.tex  classel_1_1LogBuilder.eps  classel_1_1LogBuilder.tex  classel_1_1LogDispatchCallback.eps  classel_1_1LogDispatchCallback.tex  classel_1_1LogDispatchData.tex  (+84 more)
CreatorLib/CPACSCreatorLibTests/CreatorTests/: AircraftTreeTests.cpp  CMakeLists.txt  CPACSFileTest.cpp  CPACSPositioningTests.cpp  CPACSProfilesDBTest.cpp  CPACSSegmentTest.cpp  CPACSTransformationTests.cpp  CPACSTreeItemTest.cpp  CPACSTreeTest.cpp  ConfigWriterTests.cpp  CreatorPointTest.cpp  GenerateFilesForCFD.cpp  HelperTests.cpp  MyTestHelperFunctions.cpp  MyTestHelperFunctions.h  MyTestHelperFunctionsTests.cpp  ProfileTests.cpp  UniqueXPathTest.cpp
CreatorLib/CPACSCreatorLibTests/CreatorTests/Data/: AircraftTreeTest-getAirfoils.xml  AircraftTreeTest-out.xml  AircraftTreeTest1b-doubleModel.xml  AircraftTreeTest2-getWingSweep2-withPositioning-BUGTIGL.xml  AircraftTreeTest4-composeTransformRecursively.xml  AircraftTreeTest6-positionings.xml  AircraftTreeTest7-getGlobalTransformMatrixOfElement.xml  AircraftTreeTest9-getWingSweep.xml  AircraftTreeTest9-setWingSweep3.xml  BWB_DoE_102_modWP4.4_CS_v3.xml  CPACSFileTest-create-out.xml  CPACSFileTest-create.xml  CPACSFileTest-getSetPositioning.xml  CPACSFileTest-removePositionings-out.xml  CPACSFileTest-segment-out.xml  CPACSProfilesDBTest-airfoils.xml  CPACSTreeItemTest.xml  CPACSTreeTest-bu.xml  CPACSTreeTest.xml  D150_AGILE_Hangar_3_orignal.xml  D150_AGILE_Hangar_3_orignal_modified_by_shearing.xml  D150_AGILE_Hangar_3_sweepA.xml  D150_AGILE_Hangar_3_temp.xml  DC1_PIAS.xml  airfoils-bu.xml  airfoils.xml  blendedWingBody-rot20.xml  bu-CPACSFileTest-getSetTransformation.cpacs.xml  bug-Rotation180.xml  d150-vt0.xml  in-setWingSweep-D150.xml  non-valid.cpacs.xml  out-AircraftTreeTest5-setWingSweep-withPositioning.xml  simple-aircraft-3.xml  simple-aircraft-fuselages.xml  simple-aircraft-two-fuselages-temp.xml  simple-aircraft-two-fuselages.cpacs.xml  simple-aircraft.cpacs.xml  test-setPoint.cpacs.xml  unconventional-wing.xml  (+12 more)
CreatorLib/CPACSCreatorLibTests/CreatorTests/Data/Bug/: B7772VSP_v3.xml  Optimale17-1.xml
(+359 files in other folders)
